microservices/cargotracker/monolith/deployment/deploymentconfig.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: cargotracker
  name: cargotracker
  namespace: <PROJECT>
spec:
  replicas: 1
  selector:
    deploymentconfig: cargotracker
  strategy:
    activeDeadlineSeconds: 21600
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: cargotracker
        deploymentconfig: cargotracker       
    spec:
      containers:
      - image: <CONTAINER>
        imagePullPolicy: Always
        name: cargotracker
        ports:
        - containerPort: 9080
          protocol: TCP
  test: false
  triggers:
  - imageChangeParams:
      automatic: true
      containerNames:
      - cargotracker
      from:
        kind: ImageStreamTag
        name: cargotracker:latest
        namespace: <PROJECT>
    type: ImageChange
  - type: ConfigChange
