microservices/cargotracker/monolith/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cargotracker
  name: cargotracker
  namespace: <PROJECT>
spec:
  ports:
  - name: 9080-tcp
    port: 9080
    protocol: TCP
    targetPort: 9080
  selector:
    app: cargotracker
  type: LoadBalancer
